--- a/ansible-demo/ec2-manage/ec2manage.yml
+++ b/ansible-demo/ec2-manage/ec2manage.yml
@@ -13,8 +13,8 @@
     - name: Create an ec2 instance
       ec2:
          key_name: "{{ keypair }}"
-         aws_access_key: "AKIAJELAWRSJULENDEGA"
-         aws_secret_key: "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"
+         aws_access_key: ""
+         aws_secret_key: ""
          group: launch-wizard-1  # security group name
          instance_type: "{{ instance_type}}"
          image: "{{ ami }}"
